[gd_scene load_steps=5 format=3 uid="uid://dno63lrxyfvjg"]

[ext_resource type="Texture2D" uid="uid://cfbumc1nxe82j" path="res://assets/textures/turret.png" id="1_tdw3k"]
[ext_resource type="Script" path="res://enemies/turret.gd" id="2_npvbm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lxdt"]
size = Vector2(32, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_0i5yx"]
radius = 202.299

[node name="Turret" type="StaticBody2D"]
z_index = 1
collision_layer = 9
script = ExtResource("2_npvbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_3lxdt")

[node name="ShootingRate" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tdw3k")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0i5yx")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 205)
collision_mask = 3

[connection signal="timeout" from="ShootingRate" to="." method="_on_shooting_rate_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
